Some changes while moving classes to JCommon ...

--- a/jfreereport-ext/ChangeLog
+++ b/jfreereport-ext/ChangeLog
@@ -1,4 +1,7 @@
-0.8.1_01: (04-Mar-2003) : 
+0.8.2: (12-Apr-2003) :
+  * Nothing new, just a release to keep in sync with the main project.
+
+0.8.1_01: (04-Mar-2003) :
 
   * This is the initial official version of the extension project
   
