--- a/jfreereport/README
+++ b/jfreereport/README
@@ -1,8 +1,8 @@
 *********************
-* JFREEREPORT 0.8.2 *
+* JFREEREPORT 0.8.3 *
 *********************
 
-11 April 2003
+?? May 2003
 
 1. INTRODUCTION
 ---------------
