--- a/jfreereport/README
+++ b/jfreereport/README
@@ -1,8 +1,8 @@
-*********************
-* JFREEREPORT 0.8.3 *
-*********************
+**********************
+* JFREEREPORT 0.8.3a *
+**********************
 
-26 May 2003
+04 Jun 2003
 
 1. INTRODUCTION
 ---------------
