--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -3,6 +3,17 @@
 ---------------
 A list of changes in recent versions:
 
+Hi,
+
+there's another release of JFreeReport. This one fixes the last known
+bugs, hopefully it will take some time before new ones appear :)
+
+This release will be the last release in the com.jrefinery.report
+package tree, the next release will migrate all packages to org.jfree.report.
+
+Have more fun,
+said Thomas
+
 0.8.3c: (19-Jun-2003)
         * BugFix: The Area class is not able to clip lines, any attemp results
           in an empty area. Clipping for lines is now disabled, if the output
