--- a/jfreereport/TODO.txt
+++ b/jfreereport/TODO.txt
@@ -17,3 +17,6 @@
 * Implement JFreeChart adapter and Barcode stuff
 * Allow access to the last datarow to make reporting results available outside.
 * Modularize JFreeReport to create a lightweight package (a 700 kb jar is huge!)
+* Reconfigure the table sheet name definition process, it is almost impossible
+  to disable that!
+* Implement function sets (see #note-1030630)
